# CARLA-ROS-BRIDGE

./: .gitignore  README.md
src/ros-bridge/carla_ackermann_control/: setup.py
src/ros-bridge/carla_ackermann_control/launch/: carla_ackermann_control.launch.py  carla_ros_bridge_with_ackermann_control.launch.py
src/ros-bridge/carla_ad_agent/: package.xml  setup.py
src/ros-bridge/carla_ad_agent/launch/: carla_ad_agent.launch.py
src/ros-bridge/carla_common/: setup.py
src/ros-bridge/carla_manual_control/: setup.py
src/ros-bridge/carla_msgs/: CMakeLists.txt
src/ros-bridge/carla_msgs/msg/: Gazedata.msg  (+2 more)
src/ros-bridge/carla_ros_bridge/: setup.py
src/ros-bridge/carla_ros_scenario_runner/: setup.py
src/ros-bridge/carla_spawn_objects/: setup.py
src/ros-bridge/carla_twist_to_control/: setup.py
src/ros-bridge/carla_walker_agent/: setup.py
src/ros-bridge/carla_waypoint_publisher/: setup.py
src/ros-bridge/record_node/: package.xml  setup.cfg  setup.py
src/ros-bridge/record_node/config/: bag_config.yaml  column_headers.txt  semantic_map.json
src/ros-bridge/record_node/launch/: record_node.launch.py
src/ros-bridge/record_node/record_node/: bag_remap.py  data_recordings.py  gaze_publisher.py  gaze_reader.py  img_publisher.py  record_node.py  semantic_boxes.py
src/ros-bridge/ros-g29-force-feedback/: CMakeLists.txt
src/ros-bridge/ros_compatibility/: setup.py
src/ros-bridge/rqt_carla_control/: setup.py
src/ros-bridge/test_scenarios/: how_to_run.md  package.xml  setup.cfg  setup.py
src/ros-bridge/training_scenario/: package.xml  setup.cfg  setup.py
(+130 files in other folders)
