<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>record_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kmoran.1512@gmail.com">kyle</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ros_g29_force_feedback_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>derived_object_msgs</exec_depend>
  <exec_depend>ros_compatibility</exec_depend>

  <depend>rclpy</depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
